# art-spot-contracts

./: Cargo.toml  build.sh
compiled/: registrar.wasm  spot_token.wasm
